# zkp-chaum-pedersen

./: Cargo.toml  README.md  build.rs
config/: shared.toml
proto/: auth.proto
src/: client.rs  lib.rs  main.rs  server.rs
src/config/: mod.rs
src/crypto/: mod.rs  test.rs
src/crypto/signer/: error.rs  mod.rs
src/crypto/verifier/: mod.rs
src/grpc/auth/: auth.rs  mod.rs
src/lib/grpc/auth/: auth.rs  mod.rs
src/lib/zkp/: mod.rs  test.rs
src/lib/zkp/signer/: mod.rs
src/lib/zkp/verifier/: mod.rs
src/telemetry/: mod.rs
src/zkp/: error.rs  mod.rs  test.rs
src/zkp/signer/: mod.rs
src/zkp/verifier/: mod.rs
