[package]
name = "zkp-chaum-pedersen"
version = "0.1.0"
edition = "2021"
authors = ["Eliot Wycoff"]
description = "A Chaum-Pedersen zero-knowledge proof authentication demo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib/mod.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
# Config
config = "0.13.3"

# Tracing
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.17", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"

# Async
tokio = {version = "1.32.0", features = ["macros", "rt-multi-thread"]}
parking_lot = "0.12.1"

# Data
num-bigint = {version = "0.4.4", features = ["rand"]}
rand = "0.8.5"
hex = "0.4.3"
sha256 = "1.4.0"
lazy_static = "1.4.0"
uuid = {version = "1.4.1", features = ["v4"]}
serde = {version = "1.0.188", features = ["derive"]}

# gRPC
tonic = "0.10.1"
tonic-types = "0.10.1"
prost = "0.12.1"
prost-types = "0.12.1" 

# CLI
inquire = "0.6.2"

[build-dependencies]
tonic-build = "0.10.1"